# VirtualJarvis

./: .gitignore  AGENTS.md  README.md  fasterWhisper_stt.py  formatter.py  gemini_model.py  main.py  ollama_model.py  pyproject.toml  requirements.txt  stt.py  test_pyaudio.py  tts.py  whisper.py
