[project]
name = "va"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "faster-whisper>=1.2.0",
    "google-genai>=1.31.0",
    "ipython==8.19",
    "kokoro>=0.9.4",
    "librosa>=0.11.0",
    "numpy>=2.2.6",
    "ollama>=0.5.3",
    "torch>=2.8.0",
]
